Add tickets all query